去掉了阴影

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -67,6 +67,9 @@ li {
 .card:hover {
   box-shadow: 5px 10px 5px #888888
 }
+.card.no-hover:hover {
+  box-shadow: none;
+}
 #popup{
   position: absolute;
   font-family: "Lucida Grande";
