--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -77,7 +77,28 @@ li {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 80px;
-  color:red;
+  color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#back_button {
+  margin-top: 20px;
+  display: flex;
+  padding: 10px 20px;
+  background-color: #e74c3c;
+  color: #ECF0F1;
+  border: none;
+  border-radius: 5px;
+  font-size: 24px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  visibility: hidden;
+}
+#back_button:hover {
+  background-color: #34495E;
 }
 .timer::before{
   content: "timer: ";
